--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Priceless map</title>
+    <title>Sustainable map</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -14,37 +14,37 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="https://priceless.zottelig.ch/icons/apple-touch-icon.png"
+      href="https://sustainable.zottelig.ch/icons/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="https://priceless.zottelig.ch/icons/favicon-32x32.png"
+      href="https://sustainable.zottelig.ch/icons/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="https://priceless.zottelig.ch/icons/favicon-16x16.png"
+      href="https://sustainable.zottelig.ch/icons/favicon-16x16.png"
     />
     <link
       rel="manifest"
-      href="https://priceless.zottelig.ch/icons/site.webmanifest"
+      href="https://sustainable.zottelig.ch/icons/site.webmanifest"
     />
     <link
       rel="mask-icon"
-      href="https://priceless.zottelig.ch/icons/safari-pinned-tab.svg"
+      href="https://sustainable.zottelig.ch/icons/safari-pinned-tab.svg"
       color="#da532c"
     />
     <link
       rel="shortcut icon"
-      href="https://priceless.zottelig.ch/icons/favicon.ico"
+      href="https://sustainable.zottelig.ch/icons/favicon.ico"
     />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta
       name="msapplication-config"
-      content="https://priceless.zottelig.ch/icons/browserconfig.xml"
+      content="https://sustainable.zottelig.ch/icons/browserconfig.xml"
     />
     <meta name="theme-color" content="#ffffff" />
 
@@ -69,7 +69,7 @@
           src="https://wiki.openstreetmap.org/w/images/0/0b/Community_centre-14.svg"
           style="width: 24px; vertical-align: text-bottom;"
         />
-        Priceless
+        Sustainable
       </a>
     </h1>
     <div id="filters">
