Add own icon and more filters

--- a/de/index.html
+++ b/de/index.html
@@ -65,8 +65,7 @@
     <h1>
       <a href="/de/docs">
         <img
-          class="community-centre-icon"
-          src="https://wiki.openstreetmap.org/w/images/0/0b/Community_centre-14.svg"
+          src="https://sustainable.zottelig.ch/icons/mstile-144x144.png"
           style="width: 24px; vertical-align: text-bottom;"
         />
         Nachhaltig
