--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, target-densitydpi=device-dpi, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <meta name="description" content="Experience the world. Free of charge." />
+    <meta name="description" content="Experience the world sustainably." />
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
