--- a/de/index.html
+++ b/de/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, target-densitydpi=device-dpi, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <meta name="description" content="Erlebe die Welt. Gratis." />
+    <meta name="description" content="Erlebe die Welt nachhaltig." />
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
