--- a/src/de/index.html
+++ b/src/de/index.html
@@ -120,7 +120,9 @@
     <button class="about" type="button" title="Über diese Seite">
       <i class="fas fa-info"></i>
     </button>
-
+    <button class="donate" type="button" title="Mich unterstützen">
+      <i class="fas fa-mug-hot"></i>
+    </button>
     <script
       src="https://code.jquery.com/jquery-1.9.0.min.js"
       integrity="sha256-f6DVw/U4x2+HjgEqw5BZf67Kq/5vudRZuRkljnbF344="
