--- a/src/de/index.html
+++ b/src/de/index.html
@@ -114,8 +114,11 @@
     <button class="note" type="button" title="Notiz hinzufügen">
       <i class="fas fa-comment-alt"></i>
     </button>
-    <button class="edit" type="button" title="Editieren">
+    <button class="edit" type="button" title="Bearbeiten">
       <i class="fas fa-pencil-alt"></i>
+    </button>
+    <button class="share" type="button" title="Teilen">
+      <i class="fas fa-share-alt"></i>
     </button>
     <button class="about" type="button" title="Über diese Seite">
       <i class="fas fa-info"></i>
