--- a/index.html
+++ b/index.html
@@ -3,50 +3,42 @@
   <head>
     <title>Sustainable map</title>
     <meta charset="utf-8" />
+    <link rel="manifest" href="/manifest.en.json" />
     <meta
       name="viewport"
-      content="width=device-width, target-densitydpi=device-dpi, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="description" content="Experience the world sustainably." />
 
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="application-name" content="Sustainable" />
+    <meta name="apple-mobile-web-app-title" content="Sustainable" />
+    <meta name="theme-color" content="#228b22" />
+    <meta name="msapplication-navbutton-color" content="#228b22" />
+    <meta name="msapplication-starturl" content="/" />
 
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="https://sustainable.zottelig.ch/icons/apple-touch-icon.png"
+      href="/icons/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="https://sustainable.zottelig.ch/icons/favicon-32x32.png"
+      href="/icons/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="https://sustainable.zottelig.ch/icons/favicon-16x16.png"
+      href="/icons/favicon-16x16.png"
     />
-    <link
-      rel="manifest"
-      href="https://sustainable.zottelig.ch/icons/site.webmanifest"
-    />
-    <link
-      rel="mask-icon"
-      href="https://sustainable.zottelig.ch/icons/safari-pinned-tab.svg"
-      color="#da532c"
-    />
-    <link
-      rel="shortcut icon"
-      href="https://sustainable.zottelig.ch/icons/favicon.ico"
-    />
-    <meta name="msapplication-TileColor" content="#da532c" />
-    <meta
-      name="msapplication-config"
-      content="https://sustainable.zottelig.ch/icons/browserconfig.xml"
-    />
-    <meta name="theme-color" content="#ffffff" />
+    <link rel="mask-icon" href="/icons/safari-pinned-tab.svg" color="#228b22" />
+    <link rel="shortcut icon" href="/icons/favicon.ico" />
+    <meta name="msapplication-TileColor" content="#228b22" />
+    <meta name="msapplication-config" content="/icons/browserconfig.xml" />
 
     <link rel="stylesheet" href="lib/leaflet.css" type="text/css" />
     <link rel="stylesheet" href="lib/OverPassLayer.css" type="text/css" />
@@ -58,6 +50,7 @@
     />
 
     <link rel="stylesheet" href="style.css" media="screen" type="text/css" />
+    <script src="/serviceWorkerRegister.js"></script>
   </head>
 
   <body>
@@ -65,10 +58,10 @@
     <h1>
       <a href="/docs">
         <img
-          src="https://sustainable.zottelig.ch/icons/mstile-144x144.png"
-          style="width: 22px; vertical-align: text-bottom;"
-        />
-        Sustainable
+        src="https://sustainable.zottelig.ch/icons/mstile-144x144.png"
+        style="width: 22px; vertical-align: text-bottom;"
+      />
+      Sustainable
       </a>
     </h1>
     <div id="filters">
