Add summary fade

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
     <h1>
       <a href="/docs">
         <img
-        src="https://sustainable.zottelig.ch/icons/mstile-144x144.png"
-        style="width: 22px; vertical-align: text-bottom;"
-      />
-      Sustainable
+          src="https://sustainable.zottelig.ch/icons/mstile-144x144.png"
+          style="width: 22px; vertical-align: text-bottom"
+        />
+        Sustainable
       </a>
     </h1>
     <div id="filters">
@@ -94,7 +94,7 @@
           <details>
             <summary><strong>Documentation</strong></summary>
             <br />
-            <span class="wiki"></span>
+            <div class="wiki"></div>
             <strong>Query</strong>
             <code class="query"></code>
             <a class="link" target="_blank">overpass-turbo</a>
