--- a/src/de/index.html
+++ b/src/de/index.html
@@ -58,8 +58,8 @@
     <h1>
       <a href="/de/docs">
         <img
-          src="https://sustainable.zottelig.ch/icons/mstile-144x144.png"
-          style="width: 22px; vertical-align: text-bottom;"
+          src="/icons/mstile-144x144.png"
+          style="width: 22px; vertical-align: text-bottom"
         />
         Nachhaltig
       </a>
@@ -94,7 +94,7 @@
           <details>
             <summary><strong>Dokumentation</strong></summary>
             <br />
-            <span class="wiki"></span>
+            <div class="wiki"></div>
             <strong>Abfrage</strong>
             <code class="query"></code>
             <a class="link" target="_blank">overpass-turbo</a>
