--- a/de/index.html
+++ b/de/index.html
@@ -58,8 +58,8 @@
     <h1>
       <a href="/de/docs">
         <img
-          src="https://sustainable.zottelig.ch/icons/mstile-144x144.png"
-          style="width: 22px; vertical-align: text-bottom;"
+          src="/icons/mstile-144x144.png"
+          style="width: 22px; vertical-align: text-bottom"
         />
         Nachhaltig
       </a>
