--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <h1>
       <a href="/docs">
         <img
-          src="https://sustainable.zottelig.ch/icons/mstile-144x144.png"
+          src="/icons/mstile-144x144.png"
           style="width: 22px; vertical-align: text-bottom"
         />
         Sustainable
