--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
   <body>
     <div id="map"></div>
     <h1>
-      <a href="/docs">
+      <a href="/docs/">
         <img
           src="/icons/mstile-144x144.png"
           style="width: 22px; vertical-align: text-bottom"
