--- a/src/de/index.html
+++ b/src/de/index.html
@@ -26,7 +26,7 @@
     <meta
       name="viewport"
       content="width=device-width, target-densitydpi=device-dpi, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
-      />
+    />
     <meta name="description" content="Erlebe die Welt nachhaltig." />
 
     <meta name="mobile-web-app-capable" content="yes" />
@@ -94,7 +94,12 @@
           <button class="geo" type="button">
             <i class="far fa-dot-circle"></i>
           </button>
-          <input type="search" id="osm-search" placeholder="Suche" />
+          <input
+            type="search"
+            id="osm-search"
+            placeholder="Einen Ort suchen"
+            required
+          />
           <button class="icon" type="submit">
             <i class="fas fa-search"></i>
           </button>
