Async style load based on google

--- a/de/index.html
+++ b/de/index.html
@@ -62,9 +62,17 @@
     <link rel="stylesheet" href="/lib/leaflet.css" type="text/css" />
     <link rel="stylesheet" href="/lib/OverPassLayer.css" type="text/css" />
 
-    <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css""
-    media="" onload="this.media='all'">
+    <link
+      rel="preload"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript
+      ><link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
+    /></noscript>
 
     <script src="/serviceWorkerRegister.js"></script>
   </head>
