--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     /></noscript>
 
     <script src="/serviceWorkerRegister.js"></script>
-  </head>
+  <link href="app.css" rel="stylesheet"></head>
 
   <body>
     <div id="map"></div>
@@ -149,13 +149,15 @@
       <i class="fas fa-mug-hot"></i>
     </a>
     <script
-      src="https://code.jquery.com/jquery-1.9.0.min.js"
-      integrity="sha256-f6DVw/U4x2+HjgEqw5BZf67Kq/5vudRZuRkljnbF344="
+      async
+      src="https://code.jquery.com/jquery-1.12.4.min.js"
+      integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
       crossorigin="anonymous"
     ></script>
     <script
+      async
       type="text/javascript"
       src="https://taginfo.openstreetmap.org/js/taglists.js"
     ></script>
-  <script type="text/javascript" src="script.js"></script></body>
+  <script type="text/javascript" src="en.js"></script><script type="text/javascript" src="app.js"></script></body>
 </html>
