Change to new entry points

--- a/de/index.html
+++ b/de/index.html
@@ -75,7 +75,7 @@
     /></noscript>
 
     <script src="/serviceWorkerRegister.js"></script>
-  <link href="../app.css" rel="stylesheet"></head>
+  <link href="../de/main.css" rel="stylesheet"></head>
 
   <body>
     <div id="map"></div>
@@ -159,5 +159,5 @@
       type="text/javascript"
       src="https://taginfo.openstreetmap.org/js/taglists.js"
     ></script>
-  <script type="text/javascript" src="../de.js"></script><script type="text/javascript" src="../app.js"></script></body>
+  <script type="text/javascript" src="../de/main.js"></script></body>
 </html>
