add clear button

--- a/src/en/index.html
+++ b/src/en/index.html
@@ -65,7 +65,7 @@
     <div class="right-collapse">
       <i class="fas fa-list"></i>
     </div>
-    <div class="filters-clear">
+    <div class="filters-clear" style="display: none;">
       <i class="fas fa-times"></i>
     </div>
   </div>
