--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,12 @@
 <head>
   <title></title>
   <meta charSet="utf-8" />
+  <meta name="description" content="" />
   <link rel="manifest" href="/manifest.json" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+  <meta name="application-name" content="" />
+  <meta name="apple-mobile-web-app-title" content="" />
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="theme-color" content="#228b22" />
